# Enhanced-News-Sentiment-Analysis-for-Bitcoin-Price-Prediction

./: .env.example  .gitignore  CREATE_DIRECTORY_STRUCTURE.bat  CREATE_INIT_FILES.bat  Dockerfile  README.md  VERIFY_STRUCTURE.bat  docker-compose.yml  pyproject.toml  render..yml  render.yaml
.github/workflows/: data-collection.yml
config/: redis.conf
docs/: Data Sources Documentation.md  Deployment & Infrastructure.md  Development Environment Setup.md  Directory Structure.md  Implementation Plan & Roadmap.md  Phase 1 Implementation - Data Collection.md  Phase 2 Implementation - Sentiment Analysis & Feature Engineering.md  Phase 3 Implementation - Model Training & Evaluation.md  Phase 4 Implementation - Production Model Serving.md  Phase 5 Implementation - MLOps Engineering.md  Phase 6 Implementation - Frontend.md  System Design Decisions.md  Technology Stack.md
frontend/: .env.production  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-golden-dataset.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/drift/: page.tsx
frontend/app/health/: page.tsx
frontend/app/predictions/: page.tsx
frontend/app/retraining/: page.tsx
frontend/components/layout/: Header.tsx  (+1 more)
frontend/lib/: api.ts  cache.ts  golden-dataset.ts  types.ts
scripts/data_collection/: collect_all_data.py  collect_and_process_all.py  collect_and_process_neondb.py  collect_to_neondb.py  test_news_collector.py  test_pandera_validation.py  test_price_collector.py  verify_collections.py
scripts/data_processing/: compare_sentiment_methods.py  reprocess_sentiment_neondb.py  test_feature_engineering.py  test_sentiment_processor.py  test_vader_analyzer.py
scripts/deployment/: backfill_predictions.py  generate_predictions.py  run_api.py  test_api.py  test_api_performance.py  test_api_with_logging.py  test_automated_retraining.py  test_drift_detection.py  test_prediction_logging.py  update_prediction_outcomes.py
scripts/development/: create_neondb_tables.py  create_tables.py  init_db.sql  run_all_tests.py  test_connections.py  test_redis.py  verify_setup.py  wait_for_services.py
scripts/maintenance/: check_database_size.py  cleanup_old_data.py  test_cleanup.py
scripts/model_training/: test_neondb_training.py  train_and_compare_models.py
src/api/: main.py
src/mlops/: automated_retraining.py  drift_detector.py  prediction_logger.py
src/serving/: feature_server.py  model_manager.py  prediction_pipeline.py
src/shared/: __init__.py  database.py  logging.py  models.py
(+69 files in other folders)
